# PhuongAnh-TTS-V2

./: .dockerignore  .env.example  .gitignore  AI_AGENT_PROMPT.md  DOCKER_WINDOWS.md  INSTALL_WINDOWS.md  Makefile  PRODUCTION_WINDOWS.md  README.md  README.vi.md  README_PYPI.md  TECHNICAL_AUDIT_REPORT.md  TROUBLESHOOTING_WINDOWS.md  UPLOAD_TO_GITHUB.md  config.yaml  docker-compose.win.yml  docker-compose.yml  pas.py  pyproject.toml  start.sh  stop.sh
.github/: FUNDING.yml
.github/workflows/: release.yml
apps/: __init__.py  gradio_xpu.py  web_stream.py
backend/: .env.example  Dockerfile  README.md  main.py  requirements.txt
backend/api/: __init__.py
backend/api/dependencies/: __init__.py
backend/api/routes/: __init__.py  admin.py  audio.py  auth.py  finance.py  payment.py  subscription.py  user.py
backend/core/: __init__.py  config.py  database.py
backend/scripts/: create_admin.py
backend/services/: __init__.py  audio_service.py  auth_service.py  cloning_service.py  subscription_service.py  user_service.py
backend/tests/: __init__.py
backend/utils/: __init__.py  api_client.py
client/: client.html
data/: README.md
data/arrow_files/: data-00000-of-00049.arrow  data-00001-of-00049.arrow  data-00002-of-00049.arrow  data-00003-of-00049.arrow  data-00004-of-00049.arrow  data-00005-of-00049.arrow  data-00006-of-00049.arrow  data-00007-of-00049.arrow  data-00008-of-00049.arrow  data-00009-of-00049.arrow  data-00010-of-00049.arrow  data-00011-of-00049.arrow  data-00012-of-00049.arrow  data-00013-of-00049.arrow  data-00014-of-00049.arrow  data-00015-of-00049.arrow  data-00016-of-00049.arrow  data-00017-of-00049.arrow  data-00018-of-00049.arrow  data-00019-of-00049.arrow  data-00020-of-00049.arrow  data-00021-of-00049.arrow  data-00022-of-00049.arrow  data-00023-of-00049.arrow  data-00024-of-00049.arrow  data-00025-of-00049.arrow  data-00026-of-00049.arrow  data-00027-of-00049.arrow  data-00028-of-00049.arrow  data-00029-of-00049.arrow  data-00030-of-00049.arrow  data-00031-of-00049.arrow  data-00032-of-00049.arrow  data-00033-of-00049.arrow  data-00034-of-00049.arrow  data-00035-of-00049.arrow  data-00036-of-00049.arrow  data-00037-of-00049.arrow  data-00038-of-00049.arrow  data-00039-of-00049.arrow  (+9 more)
docker/: Dockerfile.gpu  Dockerfile.serve  Dockerfile.win  docker-compose.prod.yml  docker-compose.yml  mongo-init.js
docs/: CUSTOM_MODEL_USAGE.md  Deploy.md  Deploy.vi.md
examples/: __init__.py  main.py  main_remote.py
finetune/: README.md  create_voices_json.py  finetune_PhuongAnh-TTS.ipynb  train.py
finetune/configs/: lora_config.py
finetune/data_scripts/: get_hf_sample.py
scripts/: setup_mongodb.sh
src/phuonganh_app/: __init__.py  auth_service.py  gradio_main.py  model_manager.py  startup.py  tts_engine.py  ui_state.py
src/phuonganh_tts/: __init__.py  audio_merge.py  base.py  chunked_generator.py  core_xpu.py  factory.py  fast.py  job_queue.py  remote.py  serve.py  smart_chunking.py  standard.py  turbo.py  utils.py
src/phuonganh_utils/: __init__.py  audio_merge.py  core_utils.py  phonemize_text.py  smart_chunking.py
tests/: README.md  test_base_utils.py  test_engine_fast.py  test_engine_remote.py  test_engine_standard.py  test_engine_turbo.py  test_factory.py  test_utils.py
training/: README.md  __init__.py
training/configs/: training_config.py
training/datasets/: __init__.py  manifest.py  phoaudiobook.py
training/preprocessing/: audio.py
web/: __init__.py  web_server.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: about.html  admin.html  autologin.html  finance.html  index.html  login.html  payment.html  pricing.html  profile.html  register.html  test_admin.html  tts.html
